samples/_failures_safe/1761186694_8c3f17_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5620a1be.c: In function ‘main’:
./samples/SAFE/__tmp_5620a1be.c:144:23: error: expected ‘;’ at end of input
  144 |                 printf
      |                       ^
      |                       ;
./samples/SAFE/__tmp_5620a1be.c:144:17: error: expected declaration or statement at end of input
  144 |                 printf
      |                 ^~~~~~
./samples/SAFE/__tmp_5620a1be.c:144:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5620a1be.c:144:17: error: expected declaration or statement at end of input
